--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -7,6 +7,9 @@
 
 }
 
+*, *::before, *::after {
+    box-sizing: border-box;
+}
 /* Typography */
 
 html {
@@ -166,4 +169,61 @@ border-radius: 100%;
 display: inline-flex;
 justify-content: center;
 align-items: center;
+}
+
+/* buttons */
+.btn {
+    border-radius: 40px;
+    border: 0;
+    cursor: pointer;
+    font-size: 1.8rem;
+    font-weight: 600;
+    padding: 2rem 3rem;
+    text-transform: uppercase;
+    white-space: nowrap;
+    text-align: center;
+    margin: 1rem 0;
+}
+.btn--primary:hover {
+    background: #3a8ffd;
+}
+.btn--primary {
+    background: var(--color-primary);
+    color: #fff;
+}
+.btn--secondary:hover {
+    background: #00c8eb;
+}
+.btn--secondary {
+    background: var(--color-secondary);
+    color: #fff;
+}
+.btn--accent {
+    background: var(--color-accent);
+    color: #fff;
+}
+.btn--accent:hover {
+    background: #ec3000;
+}
+
+.btn--outline {
+    background: #fff;
+    color: var(--color-headings);
+    border: 2px solid var(--color-headings);
+}
+.btn--outline:hover {
+    background: var(--color-headings);
+    color: #fff;
+}
+
+
+.btn--block {
+    width: 100%;
+    display: inline-block;
+}
+
+@media screen and (min-width: 1024px) {
+    .btn {
+        font-size: 1.5rem;
+    }
 }
