--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -4,6 +4,8 @@
     --color-accent: #ff3400;
     --color-headings: #1b0760;
     --color-body: #918ca4;
+    --color-border: #ccc;
+    --border-radius: 30px;
 
 }
 
@@ -231,8 +233,8 @@ align-items: center;
 /* Inputs */
 
 .input {
-    border-radius: 30px;
-    border: 1px solid #ccc;
+    border-radius: var(--border-radius);
+    border: 1px solid var(--color-border);
     color: var(--color-headings);
     font-size: 2rem;
     outline: 0;
@@ -248,4 +250,20 @@ align-items: center;
         font-size: 1.5rem;
     }
     
+}
+
+.input-group {
+
+    border: 1px solid var(--color-border);
+    border-radius: var(--border-radius);
+    display: flex;
+}
+.input-group .input {
+    border:0;
+    flex-grow: 1;
+    padding: 1.5rem, 1.5rem;
+}
+.input-group .btn {
+
+    margin: 4px;
 }
