--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -261,9 +261,31 @@ align-items: center;
 .input-group .input {
     border:0;
     flex-grow: 1;
-    padding: 1.5rem, 1.5rem;
+    padding: 1.5rem 1.5rem;
 }
 .input-group .btn {
 
     margin: 4px;
+}
+
+/* Cards */
+
+.card{
+border-radius: 7px;
+box-shadow: 0 0 20px 10px #f3f3f3;
+overflow: hidden;
+}
+
+.card__header,
+.card__body {
+    padding: 2rem 3rem;
+}
+
+.card--primary .card__header {
+    background: var(--color-primary);
+    color: #fff;
+}
+.card--secondary .card__header {
+    background: var(--color-secondary);
+    color: #fff;
 }
