--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -4,6 +4,7 @@
     --color-accent: #ff3400;
     --color-headings: #1b0760;
     --color-body: #918ca4;
+    --color-body-darker: #5c5577;
     --color-border: #ccc;
     --border-radius: 30px;
 
@@ -111,6 +112,7 @@ a {
 
 .badge--small {
     font-size: 1.6rem;
+    padding: 0.5rem 1.5rem;
 }
 
 @media screen and (min-width: 1024px) {
@@ -157,12 +159,22 @@ a {
 
 .icon {
     width: 40px;
-    height: 40ox;
+    height: 40px;
+}
+.icon--small {
+    width: 30px;
+    height: 30px;
 }
 
 .icon--primary {
     fill: var(--color-primary);
 }
+
+.icon--white {
+    fill: #fff;
+}
+
+
 .icon-container {
 background: #f3f9fa;
 width: 64px;
@@ -171,6 +183,9 @@ border-radius: 100%;
 display: inline-flex;
 justify-content: center;
 align-items: center;
+}
+.icon-container--accent {
+    background: var(--color-accent);
 }
 
 /* buttons */
@@ -218,6 +233,10 @@ align-items: center;
     color: #fff;
 }
 
+.btn--strected {
+    padding-left: 6rem;
+    padding-right: 6rem;
+}
 
 .btn--block {
     width: 100%;
@@ -289,3 +308,216 @@ overflow: hidden;
     background: var(--color-secondary);
     color: #fff;
 }
+.card--secondary .badge--secondary {
+    background: #02cdf1;
+}
+
+/* Plans */
+.plan__name {
+    color: #fff;
+    font-size: 2.4 rem;
+    font-weight: 500;
+    margin: 0;
+}
+.plan__price {
+    font-size: 6rem;
+}
+.plan__billing-cycle {
+    font-size: 2rem;
+    font-weight: 300;
+    opacity: 0.8;
+    margin-right: 1rem;
+}
+.plan__description {
+    font-size: 2rem;
+    font-weight: 300;
+    letter-spacing: 1px;
+    display: block ;
+}
+
+.plan .list_item {
+    margin-bottom: 2rem;
+}
+
+.plan--popular .card__header {
+    position: relative;
+}
+
+
+.plan--popular .card__header::before{
+    content: url(../Images/popular.svg);
+    width: 40px;
+    display: inline-block;
+    position: absolute;
+    top:-6px;
+    right: 5%;
+}
+
+@media  screen and (min-width: 1024px) {
+    .plan__name {
+        font-size: 1.4rem;
+    }
+    .plan__price {
+        font-size: 5rem;
+    }
+    .plan__billing-cycle {
+        font-size: 1.6rem;
+    }
+    .plan__description {
+        font-size: 1.7rem;
+    }
+    
+}
+
+/* Media */
+
+.media { 
+    display: flex;
+
+}
+.media__title {
+    margin-top: 0;
+    
+}
+.media__body {
+    margin: 0 2rem;
+}
+.media__image {
+    margin-top: 1rem;
+
+}
+
+/* Quotes */
+
+.quote
+{
+    font-size: 3rem;
+    font-style: italic;
+    color: var(--color-body-darker);
+    line-height: 1.3;
+}
+.quote__text::before {
+    content: open-quote;
+}
+.quote__text::after {
+    content: close-quote;
+}
+
+.quote_author {
+    font-size: 3rem;
+    font-weight: 500;
+    font-style: normal;
+    margin-bottom: 0;
+}
+.quote_organization {
+    color: var(--color-headings);
+    font-size: 2rem;
+    font-weight: 300;
+    opacity: 0 .4;
+    font-style: normal;
+}
+.quote__line {
+    position: relative;
+    bottom:10px;
+}
+
+@media screen and (min-width: 1024px) {
+    .quote {
+        font-size: 2rem;
+    }
+    .quote_author {
+        font-size: 2.4rem;
+    }
+    .quote_organization {
+        font-size: 1.6rem;
+    }
+    
+}
+
+/* Grids */
+
+.grid {
+
+    display: grid;
+}
+
+@media screen and (min-width: 768px) {
+    .grid--1x2 {
+       grid-template-columns: repeat(2, 1fr);
+    }
+    
+}
+@media screen and (min-width: 1024px) {
+    .grid--1x3 {
+       grid-template-columns: repeat(3, 1fr);
+    }
+    
+}
+/* Testimonials */
+
+.testimonial {
+    padding: 3rem;
+}
+.testimonial__image {
+    position: relative;
+}
+.testimonial__image > img {
+    width: 100%;
+}
+.testimonial__image > .icon-container{
+    position: absolute;
+    top:3rem;
+    right: -32px;
+}
+
+@media screen and (min-width: 768px) {
+  .testimonial .quote,
+  .testimonial .quote_author{
+    font-size: 2.5rem;
+  }
+  .testimonial .quote {
+    margin-left: 6rem;
+  }
+    
+}
+
+ /* Callouts */
+
+ .callout {
+   padding: 4rem;
+   border-radius: 5px;
+ }
+
+ .callout--primary {
+     background: var(--color-primary);
+     color: #fff;
+ } 
+ .callout__heading {
+    color: #fff;
+    margin-top: 0;
+    font-size: 3rem;
+ }
+
+ .callout .btn {
+    justify-self: center;
+    align-self: center;
+ }
+ .callout__Content {
+    text-align: center;
+ }
+
+ @media screen and (min-width: 768px) {
+   .callout .grid--1x2 {
+    grid-template-columns: 1fr auto;
+   }
+
+   .callout__Content {
+    text-align: left;
+   }
+
+   .callout .btn {
+    justify-self: start;
+    margin: 0 2rem;
+   }
+      
+  }
