--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -15,6 +15,11 @@
 }
 /* Typography */
 
+::selection {
+    background: var(--color-primary);
+    color: #fff;
+}
+
 html {
     font-size: 62.5%;
 }
@@ -31,6 +36,7 @@ body{
 h1,h2,h3 {
     color: var(--color-headings);
     margin-bottom: 1rem;
+    line-height: 1.1;
 }
 
 h1{
@@ -41,6 +47,7 @@ h2{
 }
 h3 {
     font-size: 3rem;
+    font-weight: 500;
    
 }
 p{
@@ -129,7 +136,7 @@ a {
 .list {
     list-style: none;
     padding-left: 0;
-    color: var(--color-headings);
+    
 }
 
 .list--inline .list__item {
@@ -141,6 +148,7 @@ a {
 .list--tick {
     list-style-image: url(../Images/tick.svg);
     padding-left: 3rem;
+    color: var(--color-headings);
 }
 
 .list--tick .list__item {
@@ -195,12 +203,21 @@ align-items: center;
     cursor: pointer;
     font-size: 1.8rem;
     font-weight: 600;
+    margin: 1rem 0;
+    outline: 0;
     padding: 2rem 3rem;
+    text-align: center;
     text-transform: uppercase;
     white-space: nowrap;
-    text-align: center;
-    margin: 1rem 0;
 }
+
+.btn .icon {
+    width: 2rem;
+    height: 2rem;
+    margin-right: 1rem;
+    vertical-align: middle;
+}
+
 .btn--primary:hover {
     background: #3a8ffd;
 }
@@ -280,7 +297,7 @@ align-items: center;
 .input-group .input {
     border:0;
     flex-grow: 1;
-    padding: 1.5rem 1.5rem;
+    padding: 1.5rem 2rem;
 }
 .input-group .btn {
 
@@ -308,11 +325,19 @@ overflow: hidden;
     background: var(--color-secondary);
     color: #fff;
 }
+.card--primary .badge--primary {
+background-color: #126de4;
+}
+
 .card--secondary .badge--secondary {
     background: #02cdf1;
 }
 
 /* Plans */
+.plan{
+    transition: transform .2s ease-out;
+}
+
 .plan__name {
     color: #fff;
     font-size: 2.4 rem;
@@ -339,6 +364,11 @@ overflow: hidden;
     margin-bottom: 2rem;
 }
 
+.plan--popular
+{
+    transform: scale(1.1);
+}
+
 .plan--popular .card__header {
     position: relative;
 }
@@ -351,6 +381,12 @@ overflow: hidden;
     position: absolute;
     top:-6px;
     right: 5%;
+}
+.plan:hover{
+    transform: scale(1.05);
+}
+.plan--popular:hover{
+    transform: scale(1.15);
 }
 
 @media  screen and (min-width: 1024px) {
@@ -373,6 +409,7 @@ overflow: hidden;
 
 .media { 
     display: flex;
+    margin-bottom: 4rem;
 
 }
 .media__title {
@@ -550,3 +587,199 @@ overflow: hidden;
     max-height: 100vh;
     opacity: 1;
   }
+
+  /* Blocks */
+  .block {
+    --padding-vertical: 6rem;
+    padding: var(--padding-vertical) 2rem;
+
+  }
+  .block__header{
+    text-align: center;
+  }
+  .block__heading {
+    margin-top: 0;
+  }
+  .block--dark {
+    background: #000;
+    color: #7b857b;
+  }
+  .block--dark h1, 
+  .block--dark h2, 
+  .block--dark h3{ 
+    color: #fff;
+  }
+  .block-skewed-right {
+    padding-bottom: calc(var(--padding-vertical) + 4rem);
+    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 90%);
+  }
+  .block-skewed-left {
+    padding-bottom: calc(var(--padding-vertical) + 4rem);
+    clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 100%);
+  }
+  .container{
+    max-width: 1140px;
+    margin: 0 auto;
+  }
+
+  /* Navigation Bar */
+ 
+  .nav {
+    background: #000;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding: 0 1rem;
+    align-items: center;
+  }
+  .nav__list{
+    width: 100%;
+    margin: 0;
+  }
+  .nav__item {
+    padding: 0.5rem 2rem;
+    border-bottom: 1px solid #222;
+  }
+  .nav__item  > a{
+    color: #d2dbd2;
+    transition: color 0.3s;
+  }
+  .nav__item  > a:hover{
+    color: #fff;
+  }
+  .nav__toggler{
+    opacity: .5;
+    transition: box-shadow .15s;
+    cursor: pointer;
+  }
+
+  .nav.collapsible--expanded .nav__toggler {
+    opacity: 1;
+    box-shadow: 0 0 0 3px #666;
+    border-radius: 5px;
+  }
+  .nav__brand {
+    transform: translateY(5px);
+  }
+
+  @media screen and (min-width: 768px) {
+    .nav__toggler{
+        display: none;
+    }
+    .nav__list {
+        width: auto;
+        display: flex;
+        font-size: 1.6rem;
+        max-height: 100%;
+        opacity: 1;
+    }
+    .nav__item {
+        border: 0;
+    }
+
+  }
+
+  /* Hero */
+ 
+  .hero_tagline {
+    font-size: 2rem;
+    color: #b9c3cf;
+    letter-spacing: 1px;
+    margin: 2rem 0 5rem;
+  }
+  .hero__image {
+    width: 100%;
+  }
+
+  @media screen and (min-width: 768px) {
+    .hero {
+        padding-top: 0;
+    }
+    .hero__content{
+        text-align: left;
+        align-self: center;
+    }
+    
+  }
+
+  /* Domain Block */
+
+  .block-domain .input-group {
+    box-shadow: 0 0 30px 20px #e6ebee;
+    border: 0;
+    margin: 4rem auto;
+    max-width: 700px;
+  }
+  .block-domain__prices {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 6rem);
+    font-size: 2rem;
+    font-weight: 600;
+    justify-items: center;
+    max-width: 800px;
+    margin: 0 auto;
+  }
+
+  @media screen and (min-width: 768px) {
+    .block-domain__prices {
+      grid-template-columns: repeat(auto-fit, minmax(10rem,1fr));
+    }
+    
+  }
+
+  /* Plans Block */
+
+  .block-plans .grid {
+    gap: 8rem 4rem;
+  }
+  
+  .block-plans .card {
+    max-width: 500px;
+    margin: 0 auto;
+  }
+/* Feature */
+
+.feature {
+    gap: 4rem 2rem;
+    margin: 12rem 0;
+}
+
+.feature__heading {
+    margin: 1rem 0;
+}
+.feature__image {
+    width: 100%;
+}
+
+.feature:first-of-type {
+    margin-top: 6rem;
+}
+
+@media screen and (min-width: 768px) {
+    .feature:nth-of-type(even) .feature__content {
+        order: 2;
+    }
+    
+}
+
+/* Showcase Block*/
+
+.block-showcase__image > img {
+    width: 100%;
+}
+
+@media screen and (min-width: 768px) 
+{
+    .block-showcase .grid {
+        grid-template-columns: 50% 50%;
+    }
+
+    .block-showcase__image {
+        justify-self: end;
+    }
+    .block-showcase__image > img {
+        width: auto;
+        max-width: 700px;
+    }
+}
