--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -596,6 +596,7 @@ background-color: #126de4;
   }
   .block__header{
     text-align: center;
+    margin-bottom: 4rem;
   }
   .block__heading {
     margin-top: 0;
