Putting all component together

--- a/CSS/components/block-domain.html
+++ b/CSS/components/block-domain.html
@@ -9,7 +9,8 @@
     <input type="text" class="input" placeholder="Enter domain name here..." />
     <button class="btn btn--accent">
       <svg class="icon icon--white">
-        <use xlink:href="Images/sprite.svg#search"></use></svg
+        <use xlink:href="Images/sprite.svg#search"></use>
+      </svg>
       >Search
     </button>
   </div>
