--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -136,6 +136,7 @@ a {
 .list {
     list-style: none;
     padding-left: 0;
+
     
 }
 
@@ -202,10 +203,10 @@ align-items: center;
     border: 0;
     cursor: pointer;
     font-size: 1.8rem;
-    font-weight: 600;
+    font-weight: 600;  
     margin: 1rem 0;
     outline: 0;
-    padding: 2rem 3rem;
+    padding: 2rem 4vw;
     text-align: center;
     text-transform: uppercase;
     white-space: nowrap;
@@ -298,6 +299,7 @@ align-items: center;
     border:0;
     flex-grow: 1;
     padding: 1.5rem 2rem;
+    width: 0;
 }
 .input-group .btn {
 
@@ -610,11 +612,11 @@ background-color: #126de4;
   .block--dark h3{ 
     color: #fff;
   }
-  .block-skewed-right {
+  .block--skewed-right {
     padding-bottom: calc(var(--padding-vertical) + 4rem);
     clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 90%);
   }
-  .block-skewed-left {
+  .block--skewed-left {
     padding-bottom: calc(var(--padding-vertical) + 4rem);
     clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 100%);
   }
@@ -712,8 +714,9 @@ background-color: #126de4;
     max-width: 700px;
   }
   .block-domain__prices {
+    color: var(--color-headings);
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 6rem);
     font-size: 2rem;
     font-weight: 600;
@@ -783,4 +786,75 @@ background-color: #126de4;
         width: auto;
         max-width: 700px;
     }
+}
+/* Footer */
+.footer {
+
+    background: #232323;
+}
+.footer a {
+    color: #777;
+    transition: color .3s;
+}
+.footer a:hover {
+    color: #fff;
+}
+.footer__section .list {
+    margin: 0;
+}
+.footer__section {
+    padding: 2rem;
+    border-bottom: 1px solid #393939;
+}
+.footer__heading {
+    text-transform: uppercase;
+    font-weight: 600;
+}
+
+.footer__brand {
+    margin-top: 5rem;
+    text-align: center;
+}
+.footer__copyright {
+    font-size: 2.1rem;
+    color: #fff;
+    opacity: 0.3;
+}
+.footer__brand img {
+    /* TODOL: Consider refactoring this and applying it to all img  */ 
+    width: 100%;
+    max-width: 230px;
+
+}
+
+@media screen and (min-width: 786px)
+{
+    .footer__sections {
+       grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+    }
+    .footer .collapsible__chevron {
+        display: none;
+    }
+    .footer .collapsible__content {
+        opacity: 1;
+        max-height: 100%;
+    }
+    .footer__brand {
+        order: -1;
+        margin-top: 1rem;
+    
+    }
+
+    .footer__copyright {
+        font-size:1.5rem;
+    }
+    .footer__section
+    {
+        border: 0;
+    }
+    .footer__heading {
+        font-size: 1.6rem;
+    }
+   
+   
 }
