--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -154,7 +154,7 @@ a {
 }
 
 .list--tick {
-  list-style-image: url(../images/tick.svg);
+  list-style-image: url(../Images/tick.svg);
   padding-left: 3rem;
   color: var(--color-headings);
 }
@@ -389,7 +389,7 @@ a {
 }
 
 .plan--popular .card__header::before {
-  content: url(../images/popular.svg);
+  content: url(../Images/popular.svg);
   width: 40px;
   display: inline-block;
   position: absolute;
